--- a/src/components/Loader3D.css
+++ b/src/components/Loader3D.css
@@ -6,8 +6,8 @@
   /* align-items: center; */
   height: 100vh;
   /* background: linear-gradient(rgba(229, 255, 0, 0.81), rgba(100, 100, 100, 0.91)); */
-  border: solid 5px yellow;
+  /* border: solid 5px yellow; */
   padding: 0rem;
-  margin-top: 0rem;
+  margin: 0rem;
   position: absolute;
 }
