--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,7 @@
  }
   */
 
-  .contenedorP{
-    background: 'linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0))'
-  }
+
   
   .animated-card {
     transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transición para la animación y la sombra */
@@ -59,4 +57,30 @@ html {
     flex-direction: column;
     /* background-color: blue; */
 }
+
+ 
+::-webkit-scrollbar {
+  width:5px; 
+}
+
+
+::-webkit-scrollbar-track {
+  background-color: #d7eaff;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(203, 100%, 72%);
+  border-radius: 6px;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #00cff3;
+}
+html {
+  scroll-behavior: smooth;
+}
+
+
 }
