--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
     background-color: rgb(238, 238, 238);
  }
   */
-
+ 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-track {
@@ -12,18 +12,18 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #a3d2ff;
+  background: #5900ff;
   border-radius: 1px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #86a3ff;
+  background: #21b9ff;
 }
 
 
 html {
   scrollbar-width: thin;
-  scrollbar-color: #62c6ff #f1f1f100;
+  scrollbar-color: #ff1919 #ff690505;
 }
 
 
@@ -43,7 +43,34 @@ html {
   .awssld__content {
     background-color: #ffffff;  
   }
+
+  .awssld {
+    --organic-arrow-thickness: 4px;
+    --organic-arrow-height: 40px;
+    --slider-height-percentage: 60%;
+    --loader-bar-color: #ff0909;
+    --loader-bar-height: 6px;
+    --control-button-width: 8%;
+    --control-button-height: 25%;
+    --control-button-opacity: 0.5;
+    --control-button-hover-opacity: 0.75;
+    --control-button-background: transparent;
+    --transition-bezier: cubic-bezier(0.5, 0.075, 0.25, 0.95);
+    --slider-transition-duration: 575ms;
+    --organic-arrow-color: #ff0000;
+    --organic-arrow-border-radius: 0;
+    --control-bullet-color: #6a6a6a;
+    --control-bullet-active-color: #6a6a6a;
+    --content-background-color: #2f2f2f;
+}
+  .awssld__timer {
   
+    --timer-background-color: rgba(255, 0, 0, 0.15);
+   
+ 
+ 
+ 
+}
 
 html {
   scroll-behavior: smooth;
